Started working on ImageStatistics
Started the work on ImageStatistics. The basic UI is now
ready. Further work is needed to finish it soon.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-05-05  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/subtractsky/ui.c (preparearrays): Moved the function that
+	reads any input as float and incorporates the mask into it.
+
+	* include/fixedstringmacros.h (MOREHELPINFO): Removed long
+	explanation about help-gnuastro. Instead an info link to the part of
+	the manual that introduces it was included.
+
 2015-05-03  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* include/fixedstringmacros.h (MOREHELPINFO): Corrected to include
